--- a/src/RecyclableCalculator.Web/Content/Site.css
+++ b/src/RecyclableCalculator.Web/Content/Site.css
@@ -18,3 +18,20 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.card-index{
+    height: 60vh;
+}
+
+.card-index-text {
+    width: 100%;
+    white-space: normal;
+    text-transform: uppercase;
+    font-size: 3vw;
+    line-height: 1.2;
+    text-align: center;
+}
+
+.card-index-icon{
+    font-size: 5vw !important;
+}
