--- a/src/RecyclableCalculator.Web/Views/Home/Index.cshtml
+++ b/src/RecyclableCalculator.Web/Views/Home/Index.cshtml
@@ -1,33 +1,34 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+  ViewBag.Title = "Home Page";
 }
 
 <main>
-    <section class="row" aria-labelledby="aspnetTitle">
-        <h1 id="title">ASP.NET</h1>
-        <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-        <p><a href="https://asp.net" class="btn btn-primary btn-md">Learn more &raquo;</a></p>
-    </section>
+  <section class="row text-center mt-5" aria-labelledby="title">
+    <h1 id="title">RECYCLABLE CALCULATOR</h1>
+  </section>
 
-    <div class="row">
-        <section class="col-md-4" aria-labelledby="gettingStartedTitle">
-            <h2 id="gettingStartedTitle">Getting started</h2>
-            <p>
-                ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-                enables a clean separation of concerns and gives you full control over markup
-                for enjoyable, agile development.
-            </p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-        </section>
-        <section class="col-md-4" aria-labelledby="librariesTitle">
-            <h2 id="librariesTitle">Get more libraries</h2>
-            <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-        </section>
-        <section class="col-md-4" aria-labelledby="hostingTitle">
-            <h2 id="hostingTitle">Web Hosting</h2>
-            <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-        </section>
-    </div>
+  <div class="row mt-5">
+    <section class="col-12 text-center" aria-labelledby="title">
+      <div class="row justify-content-center gap-5">
+        <div class="col-4">
+          <a class="text-decoration-none text-body" href="@Url.Action("Index","RecyclableTypes")">
+            <article class="card card-index w-100 rounded-5 border-primary">
+              <div class="card-body d-flex align-items-center justify-content-center">
+                <strong class="card-index-text"><i class="bi bi-recycle card-index-icon"></i><br />Recyclable<br />Types</strong>
+              </div>
+            </article>
+          </a>
+        </div>
+        <div class="col-4">
+          <a class="text-decoration-none text-body" href="">
+            <article class="card card-index w-100 rounded-5 border-primary">
+              <div class="card-body d-flex align-items-center justify-content-center">
+                <strong class="card-index-text"><i class="bi bi-box-seam card-index-icon"></i><br />Recyclable<br />Items</strong>
+              </div>
+            </article>
+          </a>
+        </div>
+      </div>
+    </section>
+  </div>
 </main>
