Create recyclable types edit and delete views.

--- a/src/RecyclableCalculator.Web/Views/RecyclableTypes/Create.cshtml
+++ b/src/RecyclableCalculator.Web/Views/RecyclableTypes/Create.cshtml
@@ -16,8 +16,8 @@
     <div class="form-horizontal">
       <h4 class="text-secondary text-center">Recyclable Type</h4>
       @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-      <div class="row ms-5 gap-3">
-        <div class="form-group row mt-5">
+      <div class="row m-5 gap-3">
+        <div class="form-group row">
           <div class="col-md-2">
             @Html.LabelFor(model => model.Type, htmlAttributes: new { @class = "control-label col-md-2" })
           </div>
