Create recyclable item list and create view with js validation.

--- a/src/RecyclableCalculator.Web/Views/Home/Index.cshtml
+++ b/src/RecyclableCalculator.Web/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
           </a>
         </div>
         <div class="col-4">
-          <a class="text-decoration-none text-body" href="">
+          <a class="text-decoration-none text-body" href="@Url.Action("Index","RecyclableItems")">
             <article class="card card-index w-100 rounded-5 border-primary">
               <div class="card-body d-flex align-items-center justify-content-center">
                 <strong class="card-index-text"><i class="bi bi-box-seam card-index-icon"></i><br />Recyclable<br />Items</strong>
