UI Improvements and logging statements.

--- a/src/RecyclableCalculator.Web/Content/Site.css
+++ b/src/RecyclableCalculator.Web/Content/Site.css
@@ -19,9 +19,13 @@ textarea {
     max-width: 280px;
 }
 
-.card-index{
+.card-index {
     height: 60vh;
 }
+
+    .card-index:hover {
+        background-color: #0d6efd69;
+    }
 
 .card-index-text {
     width: 100%;
