--- a/src/RecyclableCalculator.Web/Views/Home/Index.cshtml
+++ b/src/RecyclableCalculator.Web/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-  ViewBag.Title = "Home Page";
+  ViewBag.Title = "Home";
 }
 
 <main>
@@ -10,6 +10,7 @@
   <div class="row mt-5">
     <section class="col-12 text-center" aria-labelledby="title">
       <div class="row justify-content-center gap-5">
+        <!-- Recyclable Types Card -->
         <div class="col-4">
           <a class="text-decoration-none text-body" href="@Url.Action("Index","RecyclableTypes")">
             <article class="card card-index w-100 rounded-5 border-primary">
@@ -19,6 +20,7 @@
             </article>
           </a>
         </div>
+        <!-- Recyclable Items Card -->
         <div class="col-4">
           <a class="text-decoration-none text-body" href="@Url.Action("Index","RecyclableItems")">
             <article class="card card-index w-100 rounded-5 border-primary">
