--- a/src/RecyclableCalculator.Web/Views/RecyclableTypes/Edit.cshtml
+++ b/src/RecyclableCalculator.Web/Views/RecyclableTypes/Edit.cshtml
@@ -17,49 +17,48 @@
           <h4 class="text-secondary text-center">Recyclable Type</h4>
           @Html.ValidationSummary(true, "", new { @class = "text-danger" })
           @Html.HiddenFor(model => model.Id)
-
-          <div class="row m-5 gap-3">
-            <div class="form-group row">
-              <div class="col-md-2">
-                @Html.LabelFor(model => model.Type, htmlAttributes: new { @class = "control-label col-md-2" })
-              </div>
-              <div class="col-md-10">
-                @Html.EditorFor(model => model.Type, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Type, "", new { @class = "text-danger" })
-              </div>
+        <div class="row m-5 gap-3">
+          <!-- Type -->
+          <div class="form-group row">
+            <div class="col-md-2">
+              @Html.LabelFor(model => model.Type, htmlAttributes: new { @class = "control-label col-md-2" })
             </div>
-
-            <div class="form-group row">
-              <div class="col-md-2">
-                @Html.LabelFor(model => model.Rate, htmlAttributes: new { @class = "control-label col-md-2" })
-              </div>
-              <div class="col-md-10">
-                @Html.EditorFor(model => model.Rate, new { htmlAttributes = new { @class = "form-control", type = "number", step = "0.01", min = "0" } })
-                @Html.ValidationMessageFor(model => model.Rate, "", new { @class = "text-danger" })
-              </div>
-            </div>
-
-            <div class="form-group row">
-              <div class="col-md-2">
-                @Html.LabelFor(model => model.MinKg, htmlAttributes: new { @class = "control-label col-md-2" })
-              </div>
-              <div class="col-md-10">
-                @Html.EditorFor(model => model.MinKg, new { htmlAttributes = new { @class = "form-control", type = "number", step = "0.01", min = "0" } })
-                @Html.ValidationMessageFor(model => model.MinKg, "", new { @class = "text-danger" })
-              </div>
-            </div>
-
-            <div class="form-group row">
-              <div class="col-md-2">
-                @Html.LabelFor(model => model.MaxKg, htmlAttributes: new { @class = "control-label col-md-2" })
-              </div>
-              <div class="col-md-10">
-                @Html.EditorFor(model => model.MaxKg, new { htmlAttributes = new { @class = "form-control", type = "number", step = "0.01", min = "0" } })
-                @Html.ValidationMessageFor(model => model.MaxKg, "", new { @class = "text-danger" })
-              </div>
+            <div class="col-md-10">
+              @Html.EditorFor(model => model.Type, new { htmlAttributes = new { @class = "form-control" } })
+              @Html.ValidationMessageFor(model => model.Type, "", new { @class = "text-danger" })
             </div>
           </div>
-
+          <!-- Rate -->
+          <div class="form-group row">
+            <div class="col-md-2">
+              @Html.LabelFor(model => model.Rate, htmlAttributes: new { @class = "control-label col-md-2" })
+            </div>
+            <div class="col-md-10">
+              @Html.EditorFor(model => model.Rate, new { htmlAttributes = new { @class = "form-control", type = "number", step = "0.01", min = "0" } })
+              @Html.ValidationMessageFor(model => model.Rate, "", new { @class = "text-danger" })
+            </div>
+          </div>
+          <!-- MinKg -->
+          <div class="form-group row">
+            <div class="col-md-2">
+              @Html.LabelFor(model => model.MinKg, htmlAttributes: new { @class = "control-label col-md-2" })
+            </div>
+            <div class="col-md-10">
+              @Html.EditorFor(model => model.MinKg, new { htmlAttributes = new { @class = "form-control", type = "number", step = "0.01", min = "0" } })
+              @Html.ValidationMessageFor(model => model.MinKg, "", new { @class = "text-danger" })
+            </div>
+          </div>
+          <!-- MaxKg -->
+          <div class="form-group row">
+            <div class="col-md-2">
+              @Html.LabelFor(model => model.MaxKg, htmlAttributes: new { @class = "control-label col-md-2" })
+            </div>
+            <div class="col-md-10">
+              @Html.EditorFor(model => model.MaxKg, new { htmlAttributes = new { @class = "form-control", type = "number", step = "0.01", min = "0" } })
+              @Html.ValidationMessageFor(model => model.MaxKg, "", new { @class = "text-danger" })
+            </div>
+          </div>
+        </div>
           <div class="form-group mt-3">
             <div class="col-md-offset-2 col-md-12 text-center">
               <button type="submit" class="btn btn-primary">Save</button>
