--- a/src/RecyclableCalculator.Web/Views/Shared/_Layout.cshtml
+++ b/src/RecyclableCalculator.Web/Views/Shared/_Layout.cshtml
@@ -4,14 +4,14 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <title>@ViewBag.Title - My ASP.NET Application</title>
+  <title>@ViewBag.Title - Recyclable Calculator</title>
   @Styles.Render("~/Content/css")
   @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
   <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
     <div class="container">
-      @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+      @Html.ActionLink("Recyclable Calculator", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
       <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
               aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -28,8 +28,8 @@
   <div class="container body-content">
     @RenderBody()
     <hr />
-    <footer>
-      <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+    <footer class="text-center text-muted">
+      <p>&copy; @DateTime.Now.Year - Recyclable Calculator</p>
     </footer>
   </div>
 
