--- a/src/RecyclableCalculator.Web/Views/RecyclableItems/Index.cshtml
+++ b/src/RecyclableCalculator.Web/Views/RecyclableItems/Index.cshtml
@@ -1,12 +1,18 @@
 ﻿@model IEnumerable<RecyclableCalculator.Core.Dto.RecyclableItemDtos.RecyclableItemResponse>
 
 @{
-    ViewBag.Title = "Items";
+  ViewBag.Title = "Items";
+
+  string disableClass = "";
+  if (ViewBag.CanCreateItem != null)
+  {
+    disableClass = ViewBag.CanCreateItem ? "" : "disabled";
+  }
 }
 
 <h2>Recyclable Items</h2>
 
-<a class="btn btn-sm btn-primary" href="@Url.Action("Create")">Create New</a>
+<a class="btn btn-sm btn-primary @disableClass" href="@Url.Action("Create")">Create New</a>
 
 <table class="table">
     <tr>
